# audio_modem_2025

./: .gitignore  Decoder.py  Encoder.py  README.md  Sound Test 1.py  analyse copy.ipynb  analyse.ipynb  clapping.ipynb  pyproject.toml
notebooks/: Test_laptop.ipynb  analyse.ipynb  chirp_dac90.ipynb  clapping.ipynb  dac90_pilots.ipynb  synchronisation_of_ 2chirps.ipynb  white.py  white_noise copy.ipynb  white_noise.ipynb
src/modem/: QPSK white noise.py  __init__.py  chirp.py  constants.py  estimate.py  freq.py  ldpc.py  main.py  pilot.py  qpsk.py  record.py  wav.py
tests/: test_ldpc.py  test_qpsk.py
