[project]
name = "modem"
version = "0.1.0"
description = "Audio Modem for GF3 project"
readme = "README.md"
authors = [
    { name = "Jon Tindal", email = "jon.tindal@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ldpc-jossy",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "sounddevice>=0.5.2",
    "statsmodels>=0.14.4",
]

[project.scripts]
modem-record = "modem.wav:record_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
ldpc-jossy = { git = "https://github.com/apple-phi/ldpc_jossy" }
